sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: '=' expected but ';' found.
var echange:Boolean=false
^